--- a/package.json
+++ b/package.json
@@ -1,3 +1,4 @@
+// Updated package.json with a more recent SDK version
 {
     "name": "canvas-mcp-server",
     "version": "1.0.0",
@@ -9,7 +10,7 @@
       "start": "node dist/index.js"
     },
     "dependencies": {
-      "@modelcontextprotocol/sdk": "^0.12.0",
+      "@modelcontextprotocol/sdk": "^0.10.0",
       "jsdom": "^22.1.0",
       "node-fetch": "^3.3.2",
       "zod": "^3.22.4"
