--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "type": "module",
     "scripts": {
       "build": "tsc",
-      "start": "node dist/index.js"
+      "start": "node dist/index.js",
+      "deploy:worker": "wrangler deploy src/worker.ts"
     },
     "dependencies": {
       "@modelcontextprotocol/sdk": "^1.8.0",
@@ -17,6 +18,7 @@
     "devDependencies": {
       "@types/jsdom": "^21.1.6",
       "@types/node": "^20.10.0",
-      "typescript": "^5.3.2"
+      "typescript": "^5.3.2",
+      "wrangler": "^3.0.0"
     }
   }
